# LicenseSeal

./: LICENSE  NOTICE  PACKAGING_FIX.md  README.en.md  README_de.md  Whitepaper.md  action.yml  docker-compose.firehose.yml  pyproject.toml
docs/: 00-installation.en.html  00-installation.html  00-installation.md  01-quickstart.en.html  01-quickstart.html  01-quickstart.md  02-core-workflows.en.html  02-core-workflows.html  02-core-workflows.md  03-jupyter-datasets.en.html  03-jupyter-datasets.html  03-jupyter-datasets.md  04-watermark-honey-logic.en.html  04-watermark-honey-logic.html  04-watermark-honey-logic.md  05-audit-compare-reports.en.html  05-audit-compare-reports.html  05-audit-compare-reports.md  06-firehose-osint-registry.en.html  06-firehose-osint-registry.html  06-firehose-osint-registry.md  07-ide-lsp-inbound-protection.en.html  07-ide-lsp-inbound-protection.html  07-ide-lsp-inbound-protection.md  08-llm-redteam-interceptor.en.html  08-llm-redteam-interceptor.html  08-llm-redteam-interceptor.md  09-binary-provenance.en.html  09-binary-provenance.html  09-binary-provenance.md  10-cicd-bot-github-actions.en.html  10-cicd-bot-github-actions.html  10-cicd-bot-github-actions.md  11-enterprise-control-plane.en.html  11-enterprise-control-plane.html  11-enterprise-control-plane.md  12-sca-license-compliance.en.html  12-sca-license-compliance.html  12-sca-license-compliance.md  13-troubleshooting.en.html  (+8 more)
licenseseal/: __init__.py  bot.py  build_integration.py  cli.py  core.py  diff_viewer.py  embeddings.py  enterprise.py  firehose.py  firehose_queue.py  git_integration.py  graph_fingerprint.py  honey_multilang.py  index.py  ipynb_handler.py  legal_report.py  llm_interceptor.py  lsp.py  osint.py  redteam.py  sbom.py  sca_check.py  semantic_morph.py  trust.py  watermark.py  web.py
licenseseal/control_plane/: __init__.py  app.py  rbac.py  webhooks.py
tests/: test_basic.py  test_enterprise_extensions.py  test_enterprise_ip_suite_v2.py  test_enterprise_v3.py  test_honey_firehose.py
